[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "redis-data-transfer"
version = "1.1.0"
description = "Transfer data between a redis instances or clusters"
license = "MIT"
authors = ["EDITED Devs <dev@edited.com>"]
readme = "README.md"
homepage = "https://github.com/EDITD/redis_data_transfer"
repository = "https://github.com/EDITD/redis_data_transfer"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
redis-py-cluster = "~2.0.0"
setproctitle = "~1.1.10"

[tool.poetry.dev-dependencies]
ipython = "~7.14.0"
docker = "^4.2.0"

[tool.poetry.scripts]
redis-data-transfer = "redis_data_transfer:main"
